# oc-outpost

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  DEPLOYMENT_READY.md  HANDOFF.md  MANUAL_TESTING_CHECKLIST.md  PROJECT_STATUS.md  README.md  clippy.toml  justfile
.cargo/: config.toml
.sisyphus/: boulder.json
.sisyphus/notepads/oc-outpost/: COMPLETION_REPORT.md  FINAL_STATE.md  IMPLEMENTATION_COMPLETE.md  VERIFICATION_MATRIX.md  boulder-status.md  decisions.md  final-status.md  final-verification.md  learnings.md  problems.md
.sisyphus/notepads/wire-missing-features/: learnings.md
.sisyphus/plans/: comprehensive-debug-logging.md  oc-outpost.md  wire-missing-features.md
migrations/: 001_create_instances_table.sql  002_create_topic_mappings_table.sql  003_create_log_tables.sql  004_add_container_id.sql  005_remove_dead_columns.sql  006_composite_topic_pk.sql  007_add_topic_id_to_instances.sql
research/coding-agents/: 01-initial-synthesis.md  02-concierge-swarm-architecture.md  INDEX.md  README.md
research/coding-agents/notes/: research-tooling-gaps.md
src/: config.rs  integration.rs  lib.rs  main.rs
src/api/: mod.rs
src/bot/: commands.rs  handlers.rs  mod.rs  state.rs
src/bot/handlers/: clear.rs  (+14 more)
src/db/: log_store.rs  mod.rs  tracing_layer.rs
src/forum/: mod.rs  store.rs
src/git/: worktree.rs
src/opencode/: client.rs  discovery.rs  mod.rs  stream_handler.rs
src/orchestrator/: container.rs  instance.rs  manager.rs  mod.rs  port_pool.rs  store.rs
src/telegram/: markdown.rs
src/types/: error.rs  forum.rs  instance.rs  mod.rs  opencode.rs
(+32 files in other folders)
