[package]
name = "oc-outpost"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "Telegram bot that orchestrates multiple OpenCode instances through forum topics"
authors = ["huynle"]
license = "MIT"
repository = "https://github.com/huynle/opencode-telegram"
keywords = ["telegram", "bot", "opencode", "ai", "coding-assistant"]

[dependencies]
teloxide = { version = "0.17", features = ["macros", "throttle"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
shellexpand = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
sysinfo = "0.32"
futures = "0.3"
async-stream = "0.3"
uuid = { version = "1", features = ["v4"] }
dirs = "6.0.0"
bollard = "0.18"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
wiremock = "0.6.5"
serial_test = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
